--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
 			<scope>test</scope>
                         <version>2.4.2</version>
 		</dependency>
+	 <dependency>
+	  <groupId>org.springframework.boot</groupId>
+	  <artifactId>spring-boot-autoconfigure</artifactId>
+	  <version>2.4.2</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 
 	<build>
